--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -39,6 +39,7 @@
         vertical-align: middle;
       }
       .weather-img{
+        margin-left: 10px;
         img{
           height: 15px;
         }
@@ -47,9 +48,16 @@
         margin-left: 10px;
         vertical-align: middle;
       }
+      .weather-currentCity{
+        vertical-align: middle;
+      }
     }
   }
 
+  .ant-spin.ant-spin-show-text .ant-spin-text {
+    display: inline-block;
+    margin-right: 10px;
+  }
 
   
 }
