table添加复选框做一半

--- a/src/pages/ui/ui.less
+++ b/src/pages/ui/ui.less
@@ -33,3 +33,35 @@
   top: 0;
   text-align: left;
 }
+
+.Gallery-Modal-div{
+  width: 300px;
+  height: 500px;
+  background-color: bisque
+}
+
+.ant-carousel .slick-slide {
+  text-align: center;
+  height: 160px;
+  line-height: 160px;
+  background: #364d79;
+  overflow: hidden;
+}
+
+.ant-carousel .slick-slide h3 {
+  color: #fff;
+}
+
+.slider-wrap .ant-carousel .slick-slide{
+  height: 240px;
+}
+.slider-wrap img{
+    width: 100%;
+    height: 100%;
+}
+
+//下面这段代码设置后，图片就能全显示了，但是图片失真不好看了
+// .slider-wrap div{
+//   width: 100%;
+//   height: 100%;
+// }
