--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -7,6 +7,18 @@
     line-height: 60px;
     padding: 0 20px;
     text-align: right;
+    .logo{
+      line-height: 60px;
+      text-align: left;
+      font-size: 22px;
+      img{
+        height: 40px;
+        vertical-align: middle
+      }
+      span{
+        margin-left: 5px
+      }
+    }
     a{
       margin-left: 40px;
     }
@@ -58,6 +70,17 @@
     display: inline-block;
     margin-right: 10px;
   }
-
-  
+    
 }
+  // common 页面简单头
+  .simple-page{
+    .header-top{
+      background:rgba(72, 236, 228, 0.65);;
+      color:@colorM;
+    }
+    .ant-form,
+    .ant-col-12,
+    .weather{
+      display:none;
+    }
+  }
