--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -31,6 +31,7 @@
     .breadcrumb-title{
       text-align: center;
       font-size: @fontE;
+      //顶部组件中的倒三角
       &:after{
         position: absolute;
         content: '';
