--- a/src/components/Footer/index.less
+++ b/src/components/Footer/index.less
@@ -4,6 +4,6 @@
   height: 100px;
   padding: 37px 0 33px 0;
   text-align: center;
-  color: @colorJ;
-  font-size: 13px;
+  color: @colorG;
+  font-size: 14px;
 }
