--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -2,9 +2,9 @@
 
 .home-wrap{
   background-color: @colorM;
-    height: calc(69vh);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
+  height: 69vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
 }
